Started adding code to choose correct visibility description

--- a/style.css
+++ b/style.css
@@ -285,6 +285,12 @@ body{
     font-size: 2em;
 }
 
+.visibility-desc{
+    font-size: 0.95em;
+}
+
+
+
 .pressure{
     font-size: 2em;
 }
